# gaden

./: .gitignore  .gitmodules  Changelog.md  GADEN_tutorial.md  README.md
.IDE-support/: CMakeLists.txt
environment/: CMakeLists.txt  package.xml
environment/include/environment/: environment.h
environment/src/: environment.cpp
filament_simulator/: CMakeLists.txt  package.xml
filament_simulator/src/: filament.cpp
gaden_common/: CMakeLists.txt  package.xml
gaden_common/gaden_internal_py/: utils.py
gaden_common/include/gaden_common/: GadenVersion.h  Logging.h  ReadEnvironment.h  Utils.h  Vector3.h  Vector_conversions.h
gaden_demo/: CMakeLists.txt  package.xml
gaden_demo/decompress/: readme
gaden_demo/demo/: MAPIRlab_furniture.world  MAPIRlab_furniture.yaml  OccupancyGrid3D.csv  gaden_filament_simulator.rviz  occupancy.pbm  occupancy.pgm  openFoam_to_gaden.m  wind_at_cell_center_points_0.csv_U  wind_at_cell_center_points_0.csv_V  wind_at_cell_center_points_0.csv_W
gaden_demo/demo/CADmodels/: MAPIRlab_furniture_doors_cad_model.dae  MAPIRlab_furniture_doors_cad_model.stl  MAPIRlab_furniture_walls_cad_model.stl  MAPIRlab_furniture_wardrobes_cad_model.stl  MAPIRlab_furniture_windows_cad_model.dae  tri.stl
gaden_demo/demo/CADmodels/maze/: maze.dae  maze.stl  maze_outlets.dae  maze_outlets.stl
gaden_demo/demo/CADmodels/test/: 10x6_central_obstacle_walls.dae  10x6_central_obstacle_walls.dae.stl  10x6_empty_walls.dae  10x6_maze2_walls - Mesh 1.stl  10x6_maze2_walls.dae  10x6_maze2_walls.stl  10x6_maze_walls.dae  10x6_wind_tunnel_walls.dae  Part Studio 1 - Part 1.stl
gaden_demo/demo/logs_gas_dispersion_simulator/: placeholder.txt
gaden_demo/launch/: gaden_environment.launch  gaden_player_demo.launch  gaden_simulator_demo.launch  preprocessing.launch
gaden_environment/: CMakeLists.txt  package.xml
gaden_environment/include/environment/: SourceLoc.h  environment.h
gaden_environment/src/: environment.cpp
gaden_environment/srv/: Occupancy.srv
gaden_filament_simulator/: CMakeLists.txt  package.xml
gaden_filament_simulator/include/filament_simulator/: filament.h  filament_simulator.h
gaden_filament_simulator/src/: filament.cpp  filament_simulator.cpp
gaden_msgs/: CMakeLists.txt  package.xml
gaden_msgs/srv/: GasPosition.srv  SimulationIterationRequest.srv
gaden_player/: CMakeLists.txt  package.xml
gaden_player/msg/: GasInCell.msg
gaden_player/src/: simulation_player.cpp  simulation_player.h
gaden_player/srv/: WindPosition.srv
gaden_preprocessing/: CMakeLists.txt  README.md  package.xml  preprocessing.h
gaden_preprocessing/include/: TriangleBoxIntersection.h
gaden_preprocessing/include/gaden_preprocessing/: Gaden_preprocessing.h  TriangleBoxIntersection.h
gaden_preprocessing/include/preprocessing/: preprocessing.h
gaden_preprocessing/src/: configureCoppeliaSim.cpp  moveCoppeliaRobot.cpp  preprocessing.cpp
msgs_and_srvs/: CMakeLists.txt  package.xml
msgs_and_srvs/srv/: GasPosition.srv  WindPosition.srv
olfaction_msgs/: CMakeLists.txt  package.xml
olfaction_msgs/msg/: anemometer.msg  gas_sensor.msg  gas_sensor_array.msg
olfaction_msgs/srv/: suggestNextObservationLocation.srv
preprocessing/: CMakeLists.txt  package.xml
preprocessing/include/preprocessing/: preprocessing.h
preprocessing/src/: preprocessing.cpp
simulated_anemometer/: CMakeLists.txt  package.xml
simulated_anemometer/src/: fake_anemometer.cpp  fake_anemometer.h
simulated_gas_sensor/: CMakeLists.txt  package.xml
simulated_gas_sensor/src/: fake_gas_sensor.cpp  fake_gas_sensor.h
simulated_tdlas/: CMakeLists.txt  package.xml
simulated_tdlas/include/: simulated_tdlas.h
simulated_tdlas/src/: simulated_tdlas.cpp
test_env/: CMakeLists.txt  package.xml
test_env/10x6_central_obstacle/cad_models/: 10x6_central_obstacle.stl  10x6_empty_door_right.dae  10x6_empty_door_right.stl  10x6_empty_inner.dae  10x6_empty_walls.dae  10x6_inner.dae  10x6_walls.stl
test_env/10x6_central_obstacle/launch/: GADEN.launch  GADEN_player.launch  GADEN_player.xml  GADEN_preprocessing.launch  GADEN_preprocessing.xml  main_simbot.launch
test_env/10x6_central_obstacle/launch/ros/: gaden.rviz  nav2_launch.py  stage.world
test_env/10x6_empty_room/cad_models/: 10x6_door_left.stl  10x6_empty_inner.stl
test_env/10x6_empty_room/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch
test_env/10x6_empty_room/launch/ros/: simbot_costmap_common_params.yaml  stage.world  (+1 more)
test_env/10x6_maze/cad_models/: 10x6_maze_obj_1.dae  10x6_maze_obj_2.dae  10x6_maze_obj_2.stl
test_env/10x6_maze/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch
test_env/10x6_snake/cad_models/: 10x6_walls.dae  10x6_walls.stl
test_env/10x6_snake/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch
test_env/Exp_C/cad_models/: ROOMS-outlet-1.stl  ROOMS-outlet-2.stl  ROOMS-outlet-3.stl  ROOMS-outlet-5.stl  ROOMS-outlet-6.stl  ROOMS-outlets.dae  Sphere.stl
test_env/Exp_C/launch/: gaden_expc_launch.py  gaden_expc_params.yaml  gaden_player_expc_launch.py  gaden_preproc_launch.py  gaden_preproc_params.yaml
test_env/MAPIRlab/cad_models/: MAPIRlab_tables.dae
test_env/MAPIRlab/launch/: GADEN.launch  GADEN_player.launch  GADEN_preprocessing.launch  main_simbot.launch
test_env/decompress/: decompress  readme  toASCII
test_env/decompress/src/: toASCII.cpp
test_env/launch/: gaden.rviz  gaden_player_launch.py  gaden_preproc_launch.py  gaden_sim_launch.py  main_simbot_launch.py
test_env/launch/gaden_internal/: utils.py
test_env/navigation_config/: default_coppelia_scene.ttt  gaden.rviz  nav2_launch.py  nav2_params.yaml  tdlas_test.py
test_env/navigation_config/behavior_trees/: follow_point.xml
test_env/navigation_config/resources/: default_coppelia_scene.ttt  giraff.xacro
utils/: readme  (+3 more)
utils/OccupancyGridToSTL/: CMakeLists.txt
utils/OccupancyGridToSTL/src/: OccupancyGridToSTL.cpp
utils/decompress/: CMakeLists.txt  package.xml  readme
utils/decompress/src/: comp.cpp  toASCII.cpp
(+63 files in other folders)
