<package>
  <name>environment</name>
  <version>1.0.0</version>
  <description>Package for visualizing on RVIZ the simulation environment (walls, obstacles and gas source).</description>
  <maintainer email="Ali-Abdul.Khaliq@oru.se">ali_abdul_khaliq</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/environment</url>
  <!-- <url type="bugtracker"></url> -->

  <author>ali_abdul_khaliq</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>msgs_and_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>msgs_and_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>msgs_and_srvs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

</package>
