<?xml version="1.0"?>
<package format="2">
  <name>gaden_common</name>
  <version>1.0.0</version>
  <description>Utilities common to all gaden packages</description>
  <maintainer email="ojedamorala@uma.com">Pepe Ojeda</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
