<?xml version="1.0"?>
<package>
  <name>gaden_demo</name>
  <version>0.0.0</version>
  <description>This pkg is created to store the demo files for the GADEN gas disperion simulator</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  
  <buildtool_depend>catkin</buildtool_depend>


 
  <export>
  </export>
</package>
