<?xml version="1.0"?>
<package format="3">
  <name>gaden_environment</name>
  <version>1.0.0</version>
  <description>Package for visualizing on RVIZ the simulation environment (walls, obstacles and gas source).</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gaden_common</build_depend>
  <build_depend>gaden_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
