<?xml version="1.0"?>
<package format="3">
 <name>gaden_msgs</name>
  <version>1.0.0</version>
  <description> Messages and services for the gande nodes</description>
  <maintainer email="ojedamorala@uma.es">Pepe Ojeda</maintainer>

  <license>GPLv3</license>
  <author>Pepe Ojeda</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>rosidl_default_runtime</depend>

  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>