<?xml version="1.0"?>
<package format="3">
 <name>gaden_player</name>
  <version>1.0.0</version>
  <description> This package loads the log files (results) from the gaden_simulator pkg, and provides services to evaluate the gas concentration and wind vector at a given location. The goal is to provide a fast (real time) service for the simulated MOX and Anemometer sensors.</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>

  <license>GPLv3</license>
  <author>Javier Monroy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gaden_common</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gaden_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>