<?xml version="1.0"?>
<package format="2">
  <name>gaden_preprocessing</name>
  <version>0.0.0</version>
  <description>GADEN preprocessing package to obtain the 3D occupancy gridmap from a given CAD model of the environment.</description>

  
  <maintainer email="ojedamorala@uma.es">pepe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>coppelia_remote_api</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
