<package>
  <name>msgs_and_srvs</name>
  <version>1.0.0</version>
  <description>msgs_and_srvs</description>
  <maintainer email="jgmonroy@uma.es">Javier G Monroy</maintainer>

  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
</package>
