<?xml version="1.0"?>
<package>
  <name>olfaction_msgs</name>
  <version>0.0.0</version>
  <description>Definition of msg related to artificial olfaction: Anemometers, PID, gas-sensor, gas-sensors-array, etc.</description>

  <maintainer email="jgmonory@uma.es">Javier Monroy</maintainer>
  <license>GPLv3</license>


  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
