<package>
  <name>simulated_gas_sensor</name>
  <version>1.0.0</version>
  <description>Pkg for the simulation of the response of a gas sensor (MOX, EQ, PID, etc) to different gases.</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>

  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gaden_player</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>olfaction_msgs</run_depend>
  <run_depend>gaden_player</run_depend>
</package>
